[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nikkos-tools"
version = "0.1"
description = 'Utilities for my research'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "njcleri", email = "nikko.cleri@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/njcleri/nikkos-tools#readme"
Issues = "https://github.com/njcleri/nikkos-tools/issues"
Source = "https://github.com/njcleri/nikkos-tools"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/nikkos_tools tests}"

[tool.coverage.run]
source_pkgs = ["nikkos_tools", "tests"]
branch = true
parallel = true
omit = [
  "src/nikkos_tools/__about__.py",
]

[tool.coverage.paths]
nikkos_tools = ["src/nikkos_tools", "*/nikkos-tools/src/nikkos_tools"]
tests = ["tests", "*/nikkos-tools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
